<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference android:icon="@drawable/ic_baseline_info_24"
        android:summary="@string/app_version"
        android:title="@string/app_name" />
    <PreferenceCategory android:title="@string/pref_header_contact">

        <Preference android:title="@string/title_insta"
            android:icon="@drawable/ic_baseline_insta_24"
            android:summary="@string/summary_insta">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_insta" />
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_header_website">
        <Preference android:title="@string/title_website">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_website" />
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/tag_line"
                        android:summary="@string/tag_summary">
        <Preference android:title="@string/yash_name"/>
        <Preference android:title="@string/shyam_name"/>
        <Preference android:title="@string/vaibhav_name"/>
        <Preference android:title="@string/vishal_name"/>
        <Preference android:title="@string/sagar_name"/>
        <Preference android:title="@string/talha_name"/>
        <Preference android:title="@string/upmanyu_name"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="Fuck Noteslelo" />

</PreferenceScreen>